--- a/exchange_archive.html
+++ b/exchange_archive.html
@@ -147,17 +147,18 @@
             <h2 class="ui header"><i>Personal Essays Archive</i></h2>
             <p>Here you will find an index of my personal essays. You can click on the links to open an individual essay</p>
             <ul>
+                <li>January 8, 2016 - <a href="exchange.html#essay32">New Years and Berlin</a></li>
                 <li>December 30, 2015 - <a href="exchange.html#essay31">A Day in Dusseldorf and Oberhausen</a></li>
-                <li>December 28, 2015 - <a href="exchange.html#essay30">Christmas in Germany</a></li>
-                <li>December 11, 2015 - <a href="exchange.html#essay29">Four Months</a></li>
-                <li>November 25, 2015 - <a href="exchange.html#essay28">Fall Into Winter</a></li>
-                <li>October 18, 2015 - <a href="exchange.html#essay27">Notes on some Site Changes</a></li>
-                <li>October 16, 2015 - <a href="exchange.html#essay26">Deutschland Tour: Day Fourteen</a></li>
-                <li>October 15, 2015 - <a href="exchange.html#essay25">Deutschland Tour: Day Thirteen</a></li>
-                <li>October 14, 2015 - <a href="exchange.html#essay24">Deutschland Tour: Day Twelve</a></li>
-                <li>October 13, 2015 - <a href="exchange.html#essay23">Deutschland Tour: Day Eleven</a></li>
-                <li>October 12, 2015 - <a href="exchange.html#essay22">Deutschland Tour: Day Ten</a></li>
-                <li>October 11, 2015 - <a href="exchange.html#essay21">Deutschland Tour: Day Nine</a></li>
+                <li>December 28, 2015 - <a href="exchange3.html#essay30">Christmas in Germany</a></li>
+                <li>December 11, 2015 - <a href="exchange3.html#essay29">Four Months</a></li>
+                <li>November 25, 2015 - <a href="exchange3.html#essay28">Fall Into Winter</a></li>
+                <li>October 18, 2015 - <a href="exchange3.html#essay27">Notes on some Site Changes</a></li>
+                <li>October 16, 2015 - <a href="exchange3.html#essay26">Deutschland Tour: Day Fourteen</a></li>
+                <li>October 15, 2015 - <a href="exchange3.html#essay25">Deutschland Tour: Day Thirteen</a></li>
+                <li>October 14, 2015 - <a href="exchange3.html#essay24">Deutschland Tour: Day Twelve</a></li>
+                <li>October 13, 2015 - <a href="exchange3.html#essay23">Deutschland Tour: Day Eleven</a></li>
+                <li>October 12, 2015 - <a href="exchange3.html#essay22">Deutschland Tour: Day Ten</a></li>
+                <li>October 11, 2015 - <a href="exchange3.html#essay21">Deutschland Tour: Day Nine</a></li>
                 <li>October 10, 2015 - <a href="exchange2.html#essay20">Deutschland Tour: Day Eight</a></li>
                 <li>October 9, 2015 - <a href="exchange2.html#essay19">Deutschland Tour: Day Seven</a></li>
                 <li>October 8, 2015 - <a href="exchange2.html#essay18">Deutschland Tour: Day Six</a></li>
