--- a/exchange2.html
+++ b/exchange2.html
@@ -418,7 +418,7 @@
 
          <div class="ui raised very padded text container segment">
              <div class="ui horizontal center aligned">
-                 <div><h2 class="ui header" style="float: left;"><a href="exchange.html">< Prev Page</a></h2></div>
+                 <div><h2 class="ui header" style="float: left;"><a href="exchange3.html">< Prev Page</a></h2></div>
                  <div><h2 class="ui header" style="float: right;"><a href="exchange1.html">Next Page ></a></h2></div>
              </div>
          </div>
