Added address, but don't push until way found to hide it

--- a/footer.html
+++ b/footer.html
@@ -2,9 +2,11 @@
     <div class="ui container">
         <div class="ui stackable inverted divided equal height stackable grid">
             <div class="three wide column">
-                <h4 class="ui inverted header">Find Me Online</h4>
+                <h4 class="ui inverted header">Connect</h4>
                 <div class="ui inverted link list">
-                    <a href="mailto:jasper@holton.io" class="item" target="_blank">Contact Me</a>
+                    <a href="mailto:jasper@holton.io" class="item" target="_blank">Email</a>
+                    <!-- TODO Make address more hidden than this before publishing -->
+                    <a href="address.txt" class="item" target="_blank">Post</a>
                     <a href="http://github.com/jcholton" class="item" target="_blank">Github Page</a>
                     <a href="https://www.youtube.com/user/wenikalla/" class="item" target="_blank">YouTube</a>
                     <a href="http://stackoverflow.com/users/2225373/jasper-holton" class="item" target="_blank">StackOverFlow</a>
