--- a/exchange.html
+++ b/exchange.html
@@ -157,7 +157,7 @@
       <p>Yesterday I got back from an amazing experience and what has been the best part of my exchange so far, the Europe Tour. On this tour I saw over a dozen beautiful cities and spent time with a group of nearly 60 people who I am glad to call my friends. I wasn't able to write for my blog daily as I did for the Germany tour, so this entry is going to be a bit long. For ease of orginization, I have divided the following part of this entry into sections about each city.</p>
       <p>NOTE: This entry is currently a work in progress. Right now I just have photos from each city, but soon I will follow up with a short description of each city and descriptions of the photos. I will also be adding more photos as they become available to me.</p>
       <b>Prague</b> - 11th to 13th
-      <p></p>
+      <p>After getting on the bus in Münster/Duisburg, we began our tour with an overnight drive to Prague. This proved quit exhausting, as it was difficult to sleep in the uncomfortable bus seats. After arriving in Prague, we first headed to the hostel and left our bags there. Then we began a city tour, and saw some of the beautiful sights in the city. We were also given free time in the evening. type type type </p>
       <img src="images/eurotour/etour1.jpg" class="ui large bordered rounded image">
       <img src="images/eurotour/etour2.jpg" class="ui large bordered rounded image">
       <img src="images/eurotour/etour3.jpg" class="ui large bordered rounded image">
