New blog posts (yay)

--- a/exchange_archive.html
+++ b/exchange_archive.html
@@ -147,6 +147,7 @@
     <h2 class="ui header"><i>Personal Essays Archive</i></h2>
     <p>Here you will find an index of my personal essays. You can click on the links to open an individual essay</p>
     <ul>
+      <li>June 13, 2016 - <a href="exchange.html#essay35">UNTITLED</a></li>
       <li>April 2, 2016 - <a href="exchange.html#essay34">Europe Tour</a></li>
       <li>February 11, 2016 - <a href="exchange.html#essay33">Six Months in Germany</a></li>
       <li>January 8, 2016 - <a href="exchange.html#essay32">New Years and Berlin</a></li>
